金光りん編集 ヘッダーフッター

--- a/src/main/resources/templates/manager_henshu.html
+++ b/src/main/resources/templates/manager_henshu.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link rel="icon" href="../static/imag/logo3png.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>観光地編集</title>
 <link rel="stylesheet" href="../static/css/manager_henshu.css">
@@ -197,13 +198,13 @@
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img src="../imag/logo22.png" alt="" /></a>
+					<a href=""><img src="../static/imag/logo2.png" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
 						<ul class="nav">
-							<li><a href="">ボタン</a></li>
-							<li><a href="">ボタン</a></li>
+						
+							<li><a href="">TOP</a></li>
 							<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 							<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 						</ul>
@@ -218,12 +219,12 @@
 	<header class="mheader">
 		<div class="pc_menuFlex">
 			<div class="i-logo">
-				<a href="#"><img src="../imag/logo22.png" alt="" /></a>
+				<a href="#"><img src="../static/imag/logo22.png" alt="" /></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
-					<li><a href="#nav01">ボタン</a></li>
-					<li><a href="#nav02">ボタン</a></li>
+					
+					<li><a href="#nav02">Top</a></li>
 					<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 					<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 				</ul>
