--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thyneleaf.org">
 <head>
 <meta charset="UTF-8">
-
+<link rel="icon" href="../static/imag/logo3png.png">
 <link rel="stylesheet" href="css/myPage.css">
 <title>☆マイページ☆</title>
 <!--headerのjs-->
@@ -196,17 +196,18 @@
 
 </head>
 <body>
+	<div id="top"></div>
 	<header id="header">
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img src="../imag/logo22.png" alt="" /></a>
+					<a href=""><img src="../static/imag/logo2.png" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
 						<ul class="nav">
-							<li><a href="">ボタン</a></li>
-							<li><a href="">ボタン</a></li>
+							
+							<li><a href="#top">TOP</a></li>
 							<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 							<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 
