--- a/src/main/resources/templates/manager_login.html
+++ b/src/main/resources/templates/manager_login.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <meta charset="UTF-8">
+<link rel="icon" href="../static/imag/logo3png.png">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>ログイン画面</title>
 <link rel="stylesheet" href="../static/css/manager_login.css">
@@ -209,7 +210,7 @@
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img src="../imag/logo22.png" alt="" /></a>
+					<a href=""><img src="../static/imag/logo2.png" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
@@ -230,7 +231,7 @@
 	<header class="mheader">
 		<div class="pc_menuFlex">
 			<div class="i-logo">
-				<a href="#"><img src="../imag/logo22.png" alt="" /></a>
+				<a href="#"><img src="../static/imag/logo2.png" alt="" /></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
