--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+
+<link rel="icon" href="../static/imag/logo3png.png">
 <link rel="stylesheet" href="../static/css/out.css">
 <!--headerのjs-->
 <script src="js/jquery-3.2.1.min.js"></script>
@@ -178,14 +180,13 @@ $(function($){
     <header id="header">
         <div class="container">
             <div id="h_top">
-                <div class="h_logo"><a href=""><img src="../imag/logo22.png" alt=""/></a></div>
+                <div class="h_logo"><a href=""><img src="../static/imag/logo2.png" alt=""/></a></div>
                 <div class="h_nav">
                     <nav id="gNav">
                         <ul class="nav">
-                            <li><a href="">ボタン</a></li>
-                            <li><a href="">ボタン</a></li>
-                            <li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
-							<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
+                            <li><a href="#top">TOP</a></li>
+                            <li><a href="register.html" class="btn-sin">新規登録</a></li>
+                            <li><a href="manager_login.html"class= "btn-log">ログイン</a></li>
                         </ul>
                         <div class="mask"></div>
                     </nav>
@@ -197,14 +198,13 @@ $(function($){
         
         <header class="mheader">
             <div class="pc_menuFlex">
-                <div class="i-logo"><a href="#"><img src="../imag/logo22.png" alt=""/></a>
+                <div class="i-logo"><a href="#"><img src="../static/imag/logo2.png" alt=""/></a>
                 </div>
                 <div class="pc_menu">
                     <ul>
-                        <li><a href="#nav01">ボタン</a></li>
-                        <li><a href="#nav02">ボタン</a></li>
-                        <li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
-						<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>     
+                        <li><a href="#top">TOP</a></li>
+                        <li><a href="register.html" class="btn-sin">新規登録</a></li>
+                        <li><a href="manager_login.html"class= "btn-log">ログイン</a></li>
                     </ul>
                 </div> 
             </div>
