--- a/src/main/resources/templates/purpose_osaka.html
+++ b/src/main/resources/templates/purpose_osaka.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <html xmlns:th="http:/www.thymeleaf.org">
-
+	<link rel="icon" href="../static/imag/logo3png.png">
 <head>
 <meta charset="UTF-8">
 <link href="../static/css/style_oomuro.css" rel="stylesheet"
@@ -210,8 +210,8 @@
 				<div class="h_nav">
 					<nav id="gNav">
 						<ul class="nav">
-							<li><a href="">ボタン</a></li>
-							<li><a href="">ボタン</a></li>
+							
+							<li><a href="#top">TOP</a></li>
 							<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 							<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 						</ul>
@@ -230,8 +230,7 @@
 			</div>
 			<div class="pc_menu">
 				<ul>
-					<li><a href="#nav01">ボタン</a></li>
-					<li><a href="#nav02">ボタン</a></li>
+					<li><a href="#top">ボタン</a></li>
 					<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 					<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 				</ul>
