--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<link rel="icon" href="../static/imag/logo3png.png">
 	<link th:href="@{/css/style_oomuro.css}" rel="stylesheet" type="text/css">
 	<title>観光スポット一覧</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
