--- a/src/main/resources/templates/manager_henshu.html
+++ b/src/main/resources/templates/manager_henshu.html
@@ -204,7 +204,7 @@
 					<nav id="gNav">
 						<ul class="nav">
 						
-							<li><a href="">TOP</a></li>
+							<li><a th:href="@{/top.html}">TOP</a></li>
 							<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 							<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 						</ul>
@@ -224,7 +224,7 @@
 			<div class="pc_menu">
 				<ul>
 					
-					<li><a href="#nav02">Top</a></li>
+					<li><a th:href="@{/top.html}">Top</a></li>
 					<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 					<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 				</ul>
