--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -15,15 +15,15 @@
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
 
 <!--headercss-->
-<link href="../static/css/meanmenu.css" rel="stylesheet" type="text/css">
-<link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="../static/css/header.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/meanmenu.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/header.css}" rel="stylesheet" type="text/css">
 <!--css-->
-<link href="../static/css/i-style.css" rel="stylesheet" type="text/css">
-<link href="../static/css/parts.css" rel="stylesheet" type="text/css">
-<link href="../static/css/top.css" rel="stylesheet" type="text/css">
-<link href="../static/css/slick-them.css" rel="stylesheet" type="text/css">
-<link href="../static/css/slickds.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/i-style.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/parts.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/top.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/slick-them.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/slickds.css}" rel="stylesheet" type="text/css">
 
 <!--font-awesome-->
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -49,8 +49,8 @@
 <script type="text/javascript" src="js/scroll.js"></script>
 	
 <!--slider-->
-<link href="../static/css/slick.css" rel="stylesheet" type="text/css">
-<link href="../static/css/slick-theme.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/slick.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/slick-theme.css}" rel="stylesheet" type="text/css">
 
 <!--headerscript-->
 <script type="text/javascript">
@@ -276,12 +276,12 @@ return false;
 	<div id ="top"></div>
 	<div class="start">
 		
-		<p><img src="../static/imag/logo2.png"  alt=""/></p>
+		<p><img th:src="@{/imag/logo2.png}" alt=""/></p>
 	</div>
 	<header id="header">
 	<div class="container">
 		<div id="h_top">
-		    <div class="h_logo"><a href=""><img src="../static/imag/logo2.png" alt=""/></a></div>
+		    <div class="h_logo"><a href=""><img th:src="@{/imag/logo2.png}" alt=""/></a></div>
 			<div class="h_nav">
 				<nav id="gNav">
 					<ul class="nav">
@@ -299,7 +299,7 @@ return false;
 	
 	<header class="mheader">
 		<div class="pc_menuFlex">
-			<div class="i-logo"><a href="#"><img src="../static/imag/logo2.png" alt=""/></a>
+			<div class="i-logo"><a href="#"><img th:src="@{/imag/logo2.png}" alt=""/></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
@@ -316,7 +316,7 @@ return false;
 
 	<div class="hero-img">
 		<!-- <img src="/Users/konkou/Desktop/トップページ/images/gallery-bg.jpeg"> -->
-		<div class="hero-map"><img src="../static/imag/m.png"></div>
+		<div class="hero-map"><img src="@{/imag/m.png}"></div>
 	<div class ="hero-content">
 		<p class ="hero-tittle">あなたの旅を記録に残そう</p>
 		<p class="hero-text">大切な人との時間をもっと大切にしよう<br>
@@ -325,12 +325,12 @@ return false;
 		</p>
 		<a href="#link01"><p class="text-link">行き先を決めよう→</p></a>
 	</div>
-	<a href="#link02"><div class ="sclol"><img src ="../static/imag/scrol.png"></div></a>
+	<a href="#link02"><div class ="sclol"><img src ="@{/imag/scrol.png}"></div></a>
 	</div>
 	
 <div id="link02">
 	<div class ="oritabi-contentbox">
-		<div class ="kinki-img"><img src="../static/imag/siori.png"></div>
+		<div class ="kinki-img"><img src="@{/imag/siori.png}"></div>
 		   <div class ="oritabitittle">旅のしおり作成</div>
 		   <div class ="oritabi-box">
 			   <div class ="tabi-textbox">
@@ -340,7 +340,7 @@ return false;
 					ワイワイ楽しく旅を盛り上げます。</p>
 
 			   </div>
-			   <div class="tabi-imgbox"><img src="../static/imag/gallery-bg.jpeg"></div>
+			   <div class="tabi-imgbox"><img src="@{/imag/gallery-bg.jpeg}"></div>
 
 		   </div>
 		  
@@ -352,36 +352,36 @@ return false;
 		<div id ="link01">
 	   <div class="kinnki-box">
 		   
-		   <div class ="kinki-tittle"><div class ="kinki-img"><img src="../static/imag/logo3png.png"></div>向かう旅先を選択しよう</div>
+		   <div class ="kinki-tittle"><div class ="kinki-img"><img src="@{/imag/logo3png.png}"></div>向かう旅先を選択しよう</div>
 		   <div class ="kinki-region">
 			   <div class ="prefecture">
 				   
-				   <a href =""><img src="../static/imag/osaka.png"></a>
+				   <a href =""><img src="@{/imag/osaka.png}"></a>
 				   <a href=""><p class ="prefecture-text">大阪</p></a>
 			</div>
 				<div class ="prefecture">
 				
-					<a href ="" class="prefecture-btn"><img src="../static/imag/hyougo.png"></a>
+					<a href ="" class="prefecture-btn"><img src="@{/imag/hyougo.png}"></a>
 					<a href=""><p class ="prefecture-text">兵庫</p></a>
 				</div>
 				 <div class ="prefecture">
 					
-					<a href =""class="prefecture-btn"><img src="../static/imag/kyouto.png"></a>
+					<a href =""class="prefecture-btn"><img src="@{/imag/kyouto.png}"></a>
 					<a href=""><p class ="prefecture-text">京都</p></a>
 				</div>
 				 <div class ="prefecture">
 					
-					<a href =""class="prefecture-btn"><img src="../static/imag/nara.png"></a>
+					<a href =""class="prefecture-btn"><img src="@{/imag/nara.png}"></a>
 					<a href=""><p class ="prefecture-text">奈良</p></a>
 				</div>
 				 <div class ="prefecture">
 					
-					<a href =""class="prefecture-btn"> <img src="../static/imag/wakayama.png"></a>
+					<a href =""class="prefecture-btn"> <img src="@{/imag/wakayama.png}"></a>
 					<a href=""><p class ="prefecture-text">和歌山</p></a>
 				</div>
 				 <div class ="prefecture">
 				
-					<a href =""class="prefecture-btn"><img src="../static/imag/siga.png"></a>
+					<a href =""class="prefecture-btn"><img src="@{/imag/siga.png}"></a>
 					<a href=""><p class ="prefecture-text">滋賀</p></a>
 				</div>
 			  
