--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -9,7 +9,7 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../static/slick-1.8.1/slick/slick.js"></script>
+    <script th:src="@{/slick-1.8.1/slick/slick.js}"></script>
 
 <!--リセットユイ-->
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
