--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -356,8 +356,8 @@ return false;
 		   <div class ="kinki-region">
 			   <div class ="prefecture">
 				   
-				   <a href =""><img src="@{/imag/osaka.png}"></a>
-				   <a href=""><p class ="prefecture-text">大阪</p></a>
+				   <a th:href ="@{/purpose_osaka.html}"><img src="@{/imag/osaka.png}"></a>
+				   <a th:href="@{/purpose_osaka.html}"><p class ="prefecture-text">大阪</p></a>
 			</div>
 				<div class ="prefecture">
 				
