--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -249,7 +249,7 @@
 		<div class="container">
 				<div class="login">
 						<div class="login-wrapper-title">
-				<h3 class="lo-tittle">新規登録</h3>
+				<h3 class="lo-tittle">新規登録1</h3>
 						</div>
 						<form class="login-form" th:action="@{authenticate}" method="post">
 							<div class="row">
