リンク変更　大室

--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -350,18 +350,18 @@
            
 
             //選択された住所を配列に入れる
-  		//const locations =  /*[[${spotcheck}]]*/ [];
+  		const locations =  /*[[${spotcheck}]]*/ [];
   		
 		function setupMap1() {
 			
 			//検証用住所
-		 const locations = [
+/* 		 const locations = [
             	'大阪駅' ,
                 '京セラドーム' ,
                 '心斎橋駅' ,
                 '海遊館' 
             ];
-		
+		 */
 		
             locations.forEach(function(address) {
                 const geocoder = new google.maps.Geocoder();
