--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -299,6 +299,10 @@
 							<input type="submit" class="btnds btn-submit"
 							value="登録" >
 						</div>
+						<div class="btn-box">
+							<input type="submit" class="btnds btn-submit"
+							value="ログイン画面へ" >
+						</div>
 					</div>
 				</div>
 			</div>
