--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -209,7 +209,7 @@
 				<div class="h_nav">
 					<nav id="gNav">
 						<ul class="nav">
-							<li><a href="#top">TOP</a></li>
+							<li><a th:href="@{/oritabi/top}">TOP</a></li>
 							<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 							<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 						</ul>
