--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -299,9 +299,13 @@
 							<input type="submit" class="btnds btn-submit"
 							value="登録" >
 						</div>
+						<!-- ログインのみ↓↓ -->
+						
 						<div class="btn-box">
-							<input type="submit" class="btnds btn-submit"
-							value="ログイン画面へ" >
+						<a th:href="@{/oritabi/manager_login}">
+							<input type="button" class="btnds btn-submit"
+							 value="ログイン画面へ" >
+							</a>
 						</div>
 					</div>
 				</div>
