--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -515,7 +515,7 @@
 	<div>
 		<!--リスト作成ボタン(ピン留めの場所が登録される)-->
 		<input class="btn">
-			<form th:method="POST" th:action="@{/oritabi/spotSelect}">
+			<form th:method="POST" th:action="@{/oritabi/spotcall}">
 				<button type="submit">スポットの変更</button>
 			</form>
 
