--- a/src/main/resources/static/css/myPage.css
+++ b/src/main/resources/static/css/myPage.css
@@ -3,7 +3,7 @@
 .mypage-box{
 width: 80%;
 padding: 30px;
-background-color: #deb887;
+background-color: #faf0e6;
 margin: 150px auto;
 }
 
@@ -139,7 +139,7 @@ font-weight: bold;
     .mypage-box{
       width: 90%;
       padding: 30px;
-      background-color: #deb887;
+      background-color: #faf0e6;
       margin: 30px auto;
       }
       .mypage-text{
