--- a/src/main/resources/static/css/manager_login.css
+++ b/src/main/resources/static/css/manager_login.css
@@ -14,7 +14,10 @@ article,footer, header, menu, nav, section {
   text-decoration: none;
   vertical-align: baseline;
 }
-
+.copyright {
+	position: absolute;
+	bottom: 0;
+  } 
 .lo-tittle {
   font-weight: bold;
   margin: 0 auto;
@@ -124,7 +127,10 @@ html {
     }    
 
     @media screen and (max-width:800px) {
-
+.copyright {
+	position: absolute;
+	bottom: 0;
+  } 
     .lo-tittle{
         font-weight: bold;
         margin-bottom: 20px;
