--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -14,6 +14,10 @@ article,footer, header, menu, nav, section {
   text-decoration: none;
   vertical-align: baseline;
 }
+.copyright {
+	position: absolute;
+	bottom: 0;
+  } 
 
 .lo-tittle{
   font-weight: bold;
@@ -211,6 +215,10 @@ html {
                   width: 100%;
                   height: 25px;
               }
+              .copyright {
+	position: absolute;
+	bottom: 0;
+  } 
           
               .login-form p {
                   text-align: left;
