--- a/src/main/resources/static/css/style_oomuro.css
+++ b/src/main/resources/static/css/style_oomuro.css
@@ -18,6 +18,10 @@
   font-weight: bold;
   margin-bottom: 15px;
 }
+.copyright {
+	position: absolute;
+	bottom: 0;
+  } 
 .ooosaka {
   font-weight: bold;
   text-align: center;
@@ -227,7 +231,10 @@ li{
 h5 {
   font-weight: 400;
 }
-
+.copyright {
+	position: absolute;
+	bottom: 0;
+  } 
 .container {
   margin-top: 80px;
   width: 400px;
